# Qdrant_mysql_mlx_vector_engine

./: .codeiumignore  .gitignore  .todo  .windsurfignore  ALL_SCHEMAS.sql  CASCADE_SESSION_SUMMARY.md  CHANGELOG.md  CODE_GRAPH.md  CodeIngester.py  Config.py  Config_Registry.bok  Config_Registry.md  Config_chat_mover.py  DEVIN_WORK_LOG.md  DOM_MCP_PLAN.md  DevChat_Plan.md  GC_PIPELINE.md  GraphRenderer.py  GraphToWizard.py  IDENTify_najma_email_architecture_brief.md  IDENTify_najma_email_gpt.md  LAWS I HAV JUST IDE THAT MUST BE EVENTUL.YAML  MASTER_PLAN_AGENT_OS.md  PLF_PIPELINE.md  PLF_PLAN.md  SessionMiner.py  StampEngine.py  Untitled.md  VoiceDNA.py  VoiceMatrixMapper.py  _tmp_wcl_test.py  agent_os_schema.py  agent_os_schema.sql  ane_diag.py  bcl2.py  bcl_serve.py  bcl_to_excalidraw.py  bcl_watch.py  build_reference_db.py  cleanup_check.py  (+32 more)
.bookmarkai/: key-notes.json
.devin/: blueprint.yaml  config.local.json  mcp_optimized.json
.tasks/: BACKLOG.md  DONE.md  IN_PROGRESS.md  NEXT.md  config.json
.windsurf/: settings.json
Appl_mac_tools/: MacControlPanel.m  MacControlPanel.py
BookSystem/: BgeSearch.py  Binary_congf_intenaldb_gui.md  Book.py  BookViewer.py  Config_BookSystem.py  ExtractBook.py  config.py  vbstyle_book_v2.db.bak
CACASE The Clevere/: Config.py  WHY_THIS_IS_WRONG.md  _audit.py  _audit_results.txt  ai_memory_engine.py  anomaly_detection_engine.py  audit_trail_engine.py  auto_fix_pipeline_engine.py  backup_engine.py  class_split_engine.py  comparison_engine.py  confidence_engine.py  context_engine.py  deduplication_engine.py  dependency_tracker_engine.py  evolution_engine.py  experiment_engine.py  feedback_loop_engine.py  file_split_engine.py  fingerprint_engine.py  fix_engine.py  gap_analysis_engine.py  graph_builder.py  health_monitor_engine.py  impact_analysis_engine.py  ingestion_engine.py  intelligence_engine.py  knowledge_engine.py  knowledge_graph_engine.py  knowledge_storage_engine.py  learning_engine.py  lifecycle_engine.py  main_entry_engine.py  method_split_engine.py  metrics_engine.py  (+18 more)
CascadeGUI/: CMakeLists.txt  cascade_layout.ini
CascadeGUI/src/: event_bus.cpp  event_bus.h  main.cpp
CascadeGUI/src/ai/: ai_bridge.cpp  ai_bridge.h
CascadeGUI/src/gui/: gui.h  hotkeys.cpp  menus.cpp  panel_ai.cpp  panel_console.cpp  panel_events.cpp  panel_extras.cpp  panel_graph.cpp  panel_memory.cpp  panel_profiler.cpp  theme.cpp  toolbar.cpp  window_main.cpp
(+1442 files in other folders)
